removed jop type

--- a/base/cv.tex
+++ b/base/cv.tex
@@ -16,14 +16,13 @@
 \begin{rSection}{\normalsize Summary}
 % PASTE SUMMARY HERE
 \end{rSection}
-\vspace{-0.2cm}
-\input{../../../modules/data/skills.tex}
-\input{../../../modules/experience.tex}
+\input{../../modules/education.tex}
+\input{../../modules/skills.tex}
+\input{../../modules/experience.tex}
 %-------------------------------------------------------------------------------
 %	PROJECTS
 %-------------------------------------------------------------------------------
 \begin{rSection}{\normalsize Projects}
 % PROJECT PATHS HERE 
 \end{rSection} 
-\input{../../modules/data/education.tex}
 \end{document}
