fixed resume.cls path for manual cv editing

--- a/base/cv.tex
+++ b/base/cv.tex
@@ -1,4 +1,4 @@
-\documentclass{../../base/resume}
+\documentclass{../../../base/resume}
 
 \usepackage[left=0.4 in,top=0.25 in,right=0.4 in,bottom=0.2in]{geometry}
 \usepackage{xcolor}
