removed personal info

--- a/modules/education.tex
+++ b/modules/education.tex
@@ -1,17 +1,18 @@
 \begin{rSection}{\normalsize Education}
 
-{\bf Manchester Metropolitan University} \hfill {Sep. 2021 - June 2024}
-\\ 
-\textit {BEng (Hons) Electrical and Electronic Engineering, Achieved First Class (\textbf{1st})} 
+{\bf UNIVERSITY NAME} \hfill {Start Month. Year - End Month. Year}
 \\
-Certificate of Excellence — \textit{Head of Department Award for Outstanding Final Year Project (Connectivity Theme)}
-\vspace{0.08cm}
+\textit{Degree title (e.g., BEng (Hons) Electrical and Electronic Engineering), Classification or GPA}
 \\
-\textbf{Final Year Modules:} 
+% Optional: Awards, scholarships, dean's list, project prizes
+% Example:
+% Award - \textit{Short description of the award or reason received}
+\textbf{Selected Modules:}
 \\
-Digital Electronics, Analogue Electronics, Power and Control Engineering, Communications and Networks
+Module 1, Module 2, Module 3, Module 4
 \vspace{0.1cm}
 \\
-\textbf{Professional Membership:} Member of the Institution of Engineering and Technology (MIET)
-\end{rSection} 
+% Optional professional memberships or affiliations
+\textbf{Professional Membership:} Body or institute (e.g., IET), grade (e.g., Student Member)
+\end{rSection}
 \vspace{-0.2cm}
