--- a/modules/experience.tex
+++ b/modules/experience.tex
@@ -1,26 +1,17 @@
-\begin{rSection}{\normalsize Professional Experience} \itemsep -3pt  
-\begin{rSubsection}{Data Engineer} {Apr. 2025 - May 2025}{Tech Returners}{}
-\item Delivered a GDPR‑safe AWS Lambda tool that obfuscated sensitive CSV fields, ensuring full privacy compliance
-\item  Developed Lambda‑triggered sanitisation flows, cutting manual effort by \textbf{90\%} and scaling to \textbf{1M+} records in 1MB files.
-\item Implemented CI/CD workflows with GitHub Actions and Terraform, integrating SNS alerts for success/failure notification
-\item Deployed a scalable serverless solution with \textbf{$<$1} min runtime per file, using Pytest and TDD for \textbf{95\%+} test coverage
+\begin{rSection}{\normalsize Professional Experience} \itemsep -3pt
+% Tip: duplicate any rSubsection block below to add more experiences
+
+\begin{rSubsection}{Role Title}{Month. Year - Month. Year}{Company Name}{}
+\item Delivered a measurable outcome for users or stakeholders, quantify where possible (\textbf{X\%} improvement, \textbf{N} users).
+\item Built or automated workflows using relevant tools or languages, improving reliability or throughput.
+\item Worked in a team of \textbf{N} with code reviews, testing and documentation to meet deadlines.
 \end{rSubsection}
 
-
-\begin{rSubsection}{Data Engineer} {Sep. 2024 - Dec. 2024}{Northcoders}{}
-\item Built Python pipelines that boosted ingestion speed \textbf{3×}, enhancing data accuracy and cloud efficiency
-\item Structured high-performance ETL workflows with S3, Lambda, and Glue to support real-time ingestion and analytics
-\item Enhanced delivery quality with CI/CD, IaC and optimised star-schema design, raising deployment success to \textbf{95\%}
-\item Collaborated in 2‑week Agile sprints with a \textbf{6‑engineer} team through daily stand‑ups, code reviews and pair programming
-
+\begin{rSubsection}{Role Title}{Month. Year - Month. Year}{Company Name}{}
+\item Designed and deployed a solution that reduced cost or time by \textbf{X\%}, or increased performance by \textbf{Y×}.
+\item Implemented CI/CD and infrastructure as code to raise release success to \textbf{X\%}.
+\item Collaborated with stakeholders to capture requirements, plan milestones and deliver on schedule.
 \end{rSubsection}
 
-
-\begin{rSubsection}{Freelance Electronics Consultant} {2019 - Present}{Self-Employed}{}
-\item Advised clients on bespoke PC builds, balancing performance, budget and thermal constraints
-\item Managed full build lifecycle, logistics and post‑sale support, securing \textbf{100\%} positive  feedback
-\item Diagnosed complex hardware/software faults using oscilloscopes and custom test rigs
-
-\end{rSubsection}
 \vspace{-0.2cm}
 \end{rSection}
