--- a/modules/skills.tex
+++ b/modules/skills.tex
@@ -1,10 +1,15 @@
 \begin{rSection}{\normalsize Skills}
 \vspace{0.1cm}
 
+% Tip: replace the placeholders below with comma-separated items.
 \begin{tabular}{ @{} l @{\hspace{2ex}} l }
-\textbf{Languages:} & Verilog, Python, Embedded C, MATLAB, SQL, LaTeX, Bash\\[1ex]
-\textbf{Technical Tools:} & Intel Quartus Prime, Questa-Intel, ModelSim, NI Multisim, AutoCAD, MPLAB X IDE, VS Code \\[1ex]
-\textbf{Hardware:} & Oscilloscopes, Multimeters, PCB Assembly, Signal Generators, Breadboard Prototyping \\[1ex]
+\textbf{Programming:} & Language 1, Language 2, Language 3 \\[1ex]
+\textbf{Tools:} & Tool 1, Tool 2, Tool 3 \\[1ex]
+\textbf{Hardware:} & Instrument 1, Instrument 2, Instrument 3 \\[1ex]
+\textbf{CAD \& EDA:} & Package 1, Package 2, Package 3 \\[1ex]
+\textbf{Cloud \& CI/CD:} & Platform 1, Platform 2, Practice 1, Practice 2 \\[1ex]
+\textbf{Methods:} & Agile, TDD, Version control, Documentation \\[1ex]
 \end{tabular}
+
 \vspace{-0.3cm}
 \end{rSection}
