--- a/base/cv.tex
+++ b/base/cv.tex
@@ -7,22 +7,27 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
-\name{OMAR BAROUNI}
-\address{Manchester, United Kingdom $|$ Open for relocation}
-\address{+447539085789 $|$ \href{mailto:omar_barouni@hotmail.com}{\mbox{omar\_barouni@hotmail.com}}
- $|$ \href{https://linkedin.com/in/omar-barouni}{\underline{LinkedIn}} $|$ \href{https://github.com/omar0801}{\underline{GitHub}}}
+% ======= Fill these placeholders =======
+\name{FULL NAME}
+\address{City, Country $|$ Open for relocation}
+\address{\href{tel:+000000000000}{+00 0000 000000} $|$ \href{mailto:you@example.com}{\mbox{you@example.com}}
+ $|$ \href{https://linkedin.com/in/your-handle}{\underline{LinkedIn}} $|$ \href{https://github.com/youruser}{\underline{GitHub}}}
 
 \begin{document}
+
 \begin{rSection}{\normalsize Summary}
 % PASTE SUMMARY HERE
 \end{rSection}
+
 \input{../../modules/education.tex}
 \input{../../modules/skills.tex}
 \input{../../modules/experience.tex}
+
 %-------------------------------------------------------------------------------
-%	PROJECTS
+%   PROJECTS
 %-------------------------------------------------------------------------------
 \begin{rSection}{\normalsize Projects}
 % PROJECT PATHS HERE 
-\end{rSection} 
+\end{rSection}
+
 \end{document}
