removed personal data

--- a/base/cover_letter.tex
+++ b/base/cover_letter.tex
@@ -7,9 +7,9 @@
 \setlength{\parskip}{1em} % Adds space between paragraphs
 
 \begin{flushright}
-Omar Barouni\\
-Manchester, United Kingdom\\
-+44 7539 085789\\
+Your Name\\
+City, Country\\
++00 0000 000000\\
 \today
 \end{flushright}
 
@@ -21,6 +21,6 @@ Thank you for considering my application. I look forward to the possibility of c
 team’s continued success.
 
 Kind regards,\\
-Omar Barouni
+Your Name
 
 \end{document}
